--- a/src/upload.yml
+++ b/src/upload.yml
@@ -6,10 +6,10 @@ version:                         1
 
 bots:
     -
-        username:                '{username}'
-        password:                '{password}'
-        cookie:                  '{cache_path}'
-        cache:                   '{cache_path}'
+        username:                {{ username }}
+        password:                {{ password }}
+        cookie:                  {{ cache_path }}
+        cache:                   {{ cache_path }}
 
 
 
@@ -18,10 +18,10 @@ actions:
     -
         name:                    reposting time!
         from_type:               user
-        nodes:                   '{user_to_repost}'
+        nodes:                   {{ user_to_repost }}
         edges:
             - user_feed
             - shuffle:
                 amount:          20
             - upload:
-                caption:         '{caption}'
+                caption:         {{ caption }}
