--- a/src/upload.yml
+++ b/src/upload.yml
@@ -9,7 +9,7 @@ bots:
         username:                {{ username }}
         password:                {{ password }}
         cookie:                  {{ cache_path }}
-        cache:                   {{ cache_path }}
+        cache:                   {{ cookie_path }}
 
 
 
