--- a/src/routine.yml
+++ b/src/routine.yml
@@ -12,89 +12,110 @@ bots:
         cache:                   {{ cache_path }}
 
 
-# filter:
-#         user:
-#             followers:           x > 50 and x < 1000
-#             following:           x < 500
-#         media:
-#             likers:              x < 1000
-#             hastags:             not in [sex, porn, child]
+filter:
+        user:
+            followers:           x > 50 and x < 1000
+            following:           x < 500
+        media:
+            likers:              x < 1000
+            hastags:             not in [sex, porn, child]
+
+
+actions:
+
+    -
+        name:                    unfollow
+        from_type:               user
+        nodes:
+            - {{ username }}
+        edges:
+            - following:
+                amount:          100
+            - shuffle:
+                amount:          10
+            - unfollow
+    -
+        name:                    follow, like and comment images from `genotype.competitors` likers
+        from_type:               user
+        nodes:                   {{ competitor }}
+        edges:
+            - user_feed:
+                amount:          10
+            - shuffle:
+                amount:          1
+            - likers:
+                amount:          30
+            - filter:
+                user:
+                    # id:        not bot.cache['followed'].find(identifier=x)
+                    is_private:  not x
+                    is_verified: not x
+            - follow
+            - user_feed:
+                amount:          1
+            - like
+    # -
+    #     name:                  follow & like hashtags likers
+    #     from_type:             hashtag
+    #     nodes:                 {{ hashtags }}
+    #     edges:
+    #         - hashtag_feed:
+    #             amount:        1
+    #         - likers:
+    #             amount:        10
+    #         - follow:
+    #             amount:        10
+    #         - user_feed:
+    #             amount:        2
+    #         - like:
+    #             max:           100
+    -
+        name:                    follow, like and comment images from `genotype.geotags` feed
+        from_type:               geotag
+        nodes:                   {{ geotag }}
+        edges:
+            - geotag_feed:
+                amount:          1
+            - likers:
+                amount:          30
+            - follow
+            - user_feed:
+                amount:          5
+            - like
+            - comment:
+                comments:
+                    - {{ comments }}
+
+
+    -
+        name:                    repost
+        from_type:               user
+        nodes:                   {{ to_repost }}
+        edges:
+            - user_feed:
+                amount:          20
+            - shuffle:
+                amount:          20
+            - upload:
+                caption:         {{ caption }}
+
+
+
+
+
 #
-#
-# actions:
-#
-#     -
-#         name:                    like competitors followers
-#         from_type:               user
-#         nodes:                   {{ competitors }}
-#         edges:
-#             # follow random likers
-#             - shuffle
-#             - user_feed:
-#                 amount:          1
-#             - likers:
-#                 amount:          5
-#             - filter:
-#                 user:
-#                     # id:        not bot.cache['followed'].find(identifier=x)
-#                     is_private:  not x
-#                     is_verified: not x
-#             - filter:
-#                 user:
-#                     is_private:  not x
-#             - follow:
-#                 max:             20
-#
-#             - user_feed:
-#                 amount:          2
-#             - like:
-#                 max:             30
-#     -
-#         name:                    follow & like hashtags likers
-#         from_type:               hashtag
-#         nodes:                   {{ hashtags }}
-#         edges:
-#             - hashtag_feed:
-#                 amount:          1
-#             - likers:
-#                 amount:          10
-#             - follow:
-#                 amount:          10
-#             - user_feed:
-#                 amount:          2
-#             - like:
-#                 max:             100
-#     -
-#         name:                    follow & like location posts likers
-#         from_type:               geotag
-#         nodes:                   {{ geotags }}
-#         edges:
-#             - geotag_feed:
-#                 amount: 20
-#             - likers:
-#                 amount: 10
-#             - follow
-#             - user_feed:
-#                 amount: 1
-#             - like:
-#                 max: 100
-
-
-
-
-
 # actions:
 #     -
 #         nodes:
 #             - thetruegemitaiz
 #         edges:
 #             - user_feed:
-#                 amount: 3
+#                 amount:        3
 #             - like
 #             - likers:
-#                 amount: 30
+#                 amount:        30
 #             - print:
 #                 model:
-#                     name: x.full_name
-#                     id: x.pk
-#                     username: x.username
+#                     name:      x.full_name
+#                     id:        x.pk
+#                     username:  x.username
