--- a/src/routine.yml
+++ b/src/routine.yml
@@ -4,8 +4,7 @@ version:                         1
 
 
 
-bots:
-    -
+bot:
         username:                {{ username }}
         password:                {{ password }}
         cookie:                  {{ cookie_path }}
@@ -20,20 +19,23 @@ filter:
             likers:              x < 1000
             hastags:             not in [sex, porn, child]
 
+delay:
+    unfollow:                    5
+
 
 actions:
 
-    -
-        name:                    unfollow
-        from_type:               user
-        nodes:
-            - {{ username }}
-        edges:
-            - following:
-                amount:          100
-            - shuffle:
-                amount:          10
-            - unfollow
+    # -
+    #     name:                    unfollow
+    #     from_type:               user
+    #     nodes:
+    #         - {{ username }}
+    #     edges:
+    #         - following:
+    #             amount:          100
+    #         - shuffle:
+    #             max:          10
+    #         - unfollow
     -
         name:                    follow, like and comment images from `genotype.competitors` likers
         from_type:               user
@@ -43,7 +45,8 @@ actions:
             - user_feed:
                 amount:          10
             - shuffle:
-                amount:          1
+                max:             1
+                batch:           10
             - likers:
                 amount:          30
             - filter:
