--- a/src/routine.yml
+++ b/src/routine.yml
@@ -101,11 +101,12 @@ actions:
             - user_feed:
                 amount:          50
             - shuffle:
-                amount:          50
+                max:             1
+                batch:           50
             - return:
+                key:             reposted_images
                 model:
                     url:         x.url
-
             - upload:
                 max:             1
                 caption:         {{ caption }}
