--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version:                      '3.7'
 services:
     bot_reposter:
         build:                .
-        command:              python -B -OO -m src 
+        command:              python -B -OO -m src && echo $RETURN 
         environment:
             # LOGGING_LEVEL: INFO
             PYTHONUNBUFFERED: 1
