--- a/src/routine.yml
+++ b/src/routine.yml
@@ -7,7 +7,7 @@ version:                         1
 bot:
         username:                {{ username }}
         password:                {{ password }}
-        settings:                {{ settings }}
+        # settings:                {{ settings }}
 
 
 filter:
@@ -36,7 +36,7 @@ actions:
     #             max:           10
     #         - unfollow
     -
-        name:                    follow, like and comment images from `genotype.competitors` likers
+        name:                    competitors fans interactions
         from:               user
         nodes:
             - {{ random.choice(competitors) }}
@@ -87,7 +87,7 @@ actions:
 
     -
         name:                    repost a photo from inspirations
-        from_type:               user
+        from:               user
         nodes:
             - {{ random.choice(inspirations) }}
         edges:
@@ -102,7 +102,7 @@ actions:
                     url:         x.sources[0]
             - upload:
                 max:             1
-                caption:         {{ random.choice(caption) }}
+                caption:         {{ random.choice(captions) }}
 
 
 
