--- a/src/routine.yml
+++ b/src/routine.yml
@@ -97,9 +97,9 @@ actions:
                 key:             reposted_images
                 model:
                     url:         x.sources[0]
-            - upload:
+            - upload_post:
                 max:             1
                 caption:         {{ random.choice(captions) }}
-
+                geotag: monaco
 
 
