--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,9 @@ services:
                     "phone": null,
                     "proxy": null,
                     
-                    "geotags": ["monaco"],
+                    "geotags": ["nice"],
                     "hashtags": ["casino", "money", "lamborghini"],
-                    "competitors": ["casino"],
+                    "competitors": ["instagram", "kimkardashian"],
                     "inspirations": ["archillect.png"],
                     "captions": ["hey guys, fresh new photos here", "bella rega"],
                     "comments": ["awesome", "nice", "bella"],
