--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             
     deploy:
         docker:
-           - image: xmorse/deploy-docker:0.1.0
+           - image: cistuff/deploy-docker
         environment:
              IMAGE_NAME: generic-repost-routine
              REGISTRY: clusterimages.fun
