--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
     test:
         docker:
-            - image: xmorse/instagram-botnet
+            - image: xmorse/instagram-botnet:0.3.2
         environment: 
           DATA: |
                 {
@@ -49,7 +49,7 @@ jobs:
             
     deploy:
         docker:
-           - image: cistuff/deploy-docker
+           - image: cistuff/deploy-docker:1.0.12
         environment:
              IMAGE_NAME: generic-repost-routine
              REGISTRY: clusterimages.fun
