--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
                 bot:
                     username: {{ username }}
                     password: {{ password }}
+                    settings_path: {{ settings_path }}
                 actions:
                     -
                          name: notify me
